methods.args.MethodsArgs.scala.code

def move(nbPas: Int,versLAvant: Boolean) : Boolean = {
  for (i <- 1 to Int) {
    if (versLAvant == true) 
    { 
      avance(); 
    } 
    else {
      recule();
    }
  } 
}
val resultat = move(7 , false)
